Ignore with relative paths.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *~
 
 # Ignore auto-generated hardware-configuration.nix
-/hardware-configuration.nix
+hardware-configuration.nix
 
 # Ignore changes to local.nix
-/local.nix
+local.nix
